Pagina dinamica OK conn SQL Azure OK

--- a/bin/pages/contact.html
+++ b/bin/pages/contact.html
@@ -1,41 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <title>Contact Page</title>
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
-    <link href="css/jumbotron.css" rel="stylesheet">
-  </head>
-  <body>
-    <div class="container">
-      <div class="header clearfix">
-        <nav>
-          <ul class="nav nav-pills float-right">
-            <li class="nav-item">
-              <a class="nav-link active" href="home">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="about">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="contact">Contact</a>
-            </li>
-          </ul>
-        </nav>
-        <h3 class="text-muted">Project name</h3>
-      </div>
+	{{template "_head.html" .}}
 
-        <h1 class="display-3">Contact (parte de baixo)</h1>
-        <p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      
-      <footer class="footer">
-        <p>&copy; Company 2017</p>
-      </footer>
+	<body>
+		<div class="container">
+    		{{template "_mainmenu.html"}}
 
-    </div> <!-- /container -->
-  </body>
+    		<h1 class="display-3">Contact (parte de baixo)</h1>
+    		<p class="lead">Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+
+    		{{template "_foot.html"}}
+
+    	</div><!-- /container -->
+   	</body>
 </html>
