--- a/bd-web-rest-02/bin/pages/sign.html
+++ b/bd-web-rest-02/bin/pages/sign.html
@@ -5,12 +5,12 @@
 
     <div class="container">
 
-      <form class="form-signin">
+      <form class="form-signin" action="api/autenticar" method="POST">
         <h2 class="form-signin-heading">Please sign in</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="text" id="inputLogin" class="form-control" placeholder="Login" name="login">
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control" placeholder="Password" name="senha">
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
