--- a/bd-web-rest-02/bin/themes/bs4/_head.html
+++ b/bd-web-rest-02/bin/themes/bs4/_head.html
@@ -3,7 +3,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
 
-    <title>{{.Title}} - DenuciApp</title>
+    <title>{{.Title}} - DenuciApp autenticado como {{.Usuario}}</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
